Add background images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="tit">BEST PIZZA ONLINE ORDER
                 <img src="images/LOGO/logo.png" height="100" width="100"></p>
         </div>
-        <div class="card bg-dark text-white">
+        <div class="card bg-dark text-white" id="content">
             <img src="images/backgrounds/pizza1.jpeg" id="back">
             <div class="card-img-overlay">
                 <div class="row text-center">
@@ -42,9 +42,9 @@
                     </div>
                     <div class="col-md-6 col-sm-6 text-center">
                         <label for="price" id="price">
-                            <h1>Price</h1>
+                            <h1>Price: </h1>
                         </label>
-                        <label for="amount" id="pizza-amount"></label>
+                        <label for="amount" id="pizza-amount"><h3></h3></label>
                     </div>
                 </div><br>
                 <div class="row text-center">
@@ -66,7 +66,7 @@
                         <label for="delivery" id="delivery">
                             <h1>Delivery charges</h1>
                         </label>
-                        <label for="charges" id="charges"></label><br>
+                        <label for="charges" id="charges">Rwf 1800</label><br>
                         <label for="details" id="order">
                             <h3>Details</h3>
                         </label><br>
@@ -86,6 +86,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 justify-content-end">
                         <button id="check" type="submit">Checkout</button>
+                        <button id="add" type="submit">Add order</button>
                     </div>
                 </div>
             </div>
