--- a/index.html
+++ b/index.html
@@ -27,68 +27,72 @@
         <div class="card bg-dark text-white" id="content">
             <img src="images/backgrounds/pizza1.jpeg" id="back">
             <div class="card-img-overlay">
-                <div class="row text-center">
-                    <div class="col-md-3 col-sm-3 ">
-                        <label>Choose the size</label><br>
-                        <input type="radio" name="size" value="small"> Small,    Rwf 1800<br>
-                        <input type="radio" name="size" value="medium"> Medium,   Rwf 3000<br>
-                        <input type="radio" name="size" value="large"> Large,   Rwf 5000
+                <form id="ordering">
+                    <div class="row text-center">
+                        <div class="col-md-3 col-sm-3 ">
+                            <label>Choose the size</label><br>
+                            <input type="radio" name="size" value="small" id="small"> Small, Rwf 1800<br>
+                            <input type="radio" name="size" value="medium" id="medium"> Medium, Rwf 3000<br>
+                            <input type="radio" name="size" value="large" id="large"> Large, Rwf 5000
+                        </div>
+                        <div class="col-md-3 col-sm-3 text-center">
+                            <label>Choose the crust</label><br>
+                            <input type="radio" value="crispy" name="crust" id="crispy">Crispy<br>
+                            <input type="radio" value="stuffed" name="crust" id="stuffed">Stuffed<br>
+                            <input type="radio" value="gluten-free" name="crust" id="gluten">Gluten-free
+                        </div>
+                        <div class="col-md-6 col-sm-6 text-center">
+                            <label for="price" id="price">
+                                <h1>Price: </h1>
+                            </label>
+                            <label for="amount" id="pizza-amount">
+                                <h3></h3>
+                            </label>
+                        </div>
+                    </div><br>
+                    <div class="row text-center">
+                        <div class="col-md-6 col-sm-6 ">
+                            <label>Choose toppings</label>
+                            <select id="toppings">
+                                <option value="" disabled selected>--toppings of your choice--</option>
+                                <option value="mushrooms" id="mushrooms">Mushrooms</option>
+                                <option value="onions" id="onions">Onions</option>
+                                <option value="pepperoni" id="peppe">Pepperoni</option>
+                                <option value="bacon" id="bacon">Bacon and shrimp</option>
+                                <option value="barbecue" id="chicken">Barbecue sauce and chicken</option>
+                                <option value="taco" id="taco">Taco toppings</option>
+                                <option value="cheese" id="cheese">Extra cheese</option>
+                                <option value="peppers" id="green">Green peppers</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <label for="delivery" id="delivery">
+                                <h1>Delivery charges</h1>
+                            </label>
+                            <label for="charges" id="charges">Rwf 1800</label><br>
+                            <label for="details" id="order">
+                                <h3>Details</h3>
+                            </label><br>
+                            <label for="resume" id="details"></label>
+                        </div>
+                    </div><br>
+                    <div class="row text-center">
+                        <div class="col-md-6 col-sm-6">
+                            <label>Quantity</label>
+                            <input type="number" min="1" placeholder="--order as much as possible--" id="number">
+                        </div>
+                    </div><br>
+                    <div class="row justify-content-center">
+                        <div class="col-md-6 col sm-6">
+                            <button id="pick" type="submit">Pickup</button>
+                            <button id="deliver" type="submit">Deliver</button>
+                        </div>
+                        <div class="col-md-4 col-sm-4 justify-content-end">
+                            <button id="check" type="submit">Checkout</button>
+                            <button id="add" type="submit">Add order</button>
+                        </div>
                     </div>
-                    <div class="col-md-3 col-sm-3 text-center">
-                        <label>Choose the crust</label><br>
-                        <input type="radio" value="crispy" name="crust">Crispy<br>
-                        <input type="radio" value="stuffed" name="crust">Stuffed<br>
-                        <input type="radio" value="gluten-free" name="crust">Gluten-free
-                    </div>
-                    <div class="col-md-6 col-sm-6 text-center">
-                        <label for="price" id="price">
-                            <h1>Price: </h1>
-                        </label>
-                        <label for="amount" id="pizza-amount"><h3></h3></label>
-                    </div>
-                </div><br>
-                <div class="row text-center">
-                    <div class="col-md-6 col-sm-6 ">
-                        <label>Choose toppings</label>
-                        <select>
-                            <option value="" disabled selected>--toppings of your choice--</option>
-                            <option value="mushrooms">Mushrooms</option>
-                            <option value="onions">Onions</option>
-                            <option value="pepperoni">Pepperoni</option>
-                            <option value="bacon">Bacon and shrimp</option>
-                            <option value="barbecue">Barbecue sauce and chicken</option>
-                            <option value="taco">Taco toppings</option>
-                            <option value="cheese">Extra cheese</option>
-                            <option value="peppers">Green peppers</option>
-                        </select>
-                    </div>
-                    <div class="col-md-6 col-sm-6" >
-                        <label for="delivery" id="delivery">
-                            <h1>Delivery charges</h1>
-                        </label>
-                        <label for="charges" id="charges">Rwf 1800</label><br>
-                        <label for="details" id="order">
-                            <h3>Details</h3>
-                        </label><br>
-                        <label for="resume" id="details"></label>
-                    </div>
-                </div><br>
-                <div class="row text-center">
-                    <div class="col-md-6 col-sm-6">
-                        <label>Quantity</label>
-                        <input type="number" min="1" placeholder="--order as much as possible--" id="number">
-                    </div>
-                </div><br>
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col sm-6">
-                        <button id="pick" type="submit">Pickup</button>
-                        <button id="deliver" type="submit">Deliver</button>
-                    </div>
-                    <div class="col-md-4 col-sm-4 justify-content-end">
-                        <button id="check" type="submit">Checkout</button>
-                        <button id="add" type="submit">Add order</button>
-                    </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
