Add an unordered list

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div><br>
                     <div class="row text-center">
                         <div class="col-md-6 col-sm-6 ">
-                            <label>Choose toppings</label>
+                            <label>Choose toppings</label><br>
                             <select id="toppings" multiple="multiple" size="8">
                                 <option value="" disabled selected>--toppings of your choice--</option>
                                 <option value="mushrooms" id="mushrooms">Mushrooms</option>
@@ -73,7 +73,7 @@
                             <label for="details" id="order">
                                 <h3>Details</h3>
                             </label><br>
-                            <label for="resume" id="details"></label>
+                            <label for="resume"><ul id="details"></ul></label>
                         </div>
                     </div><br>
                     <div class="row text-center">
