Remove useless comments

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                         </div>
                         <div class="col-md-3 col-sm-3 text-center">
                             <label>Choose the crust</label><br>
-                            <input type="radio" value="crispy" name="crust" id="crispy">Crispy<br>
-                            <input type="radio" value="stuffed" name="crust" id="stuffed">Stuffed<br>
-                            <input type="radio" value="gluten-free" name="crust" id="gluten">Gluten-free
+                            <input type="radio" value="crispy" name="crust" id="crispy">Crispy, Rwf 500<br>
+                            <input type="radio" value="stuffed" name="crust" id="stuffed">Stuffed Rwf 500<br>
+                            <input type="radio" value="gluten-free" name="crust" id="gluten">Gluten-free Rwf 700
                         </div>
                         <div class="col-md-6 col-sm-6 text-center">
                             <label for="price" id="price">
