Display the output

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                     <div class="row text-center">
                         <div class="col-md-3 col-sm-3 ">
                             <label>Choose the size</label><br>
-                            <input type="radio" name="size" value="small" id="small"> Small, Rwf 1800<br>
-                            <input type="radio" name="size" value="medium" id="medium"> Medium, Rwf 3000<br>
-                            <input type="radio" name="size" value="large" id="large"> Large, Rwf 5000
+                            <input type="radio" name="size" value="small" id="small"> Small_Rwf 1800<br>
+                            <input type="radio" name="size" value="medium" id="medium"> Medium_Rwf 3000<br>
+                            <input type="radio" name="size" value="large" id="large"> Large_Rwf 5000
                         </div>
                         <div class="col-md-3 col-sm-3 text-center">
                             <label>Choose the crust</label><br>
-                            <input type="radio" value="crispy" name="crust" id="crispy">Crispy, Rwf 500<br>
-                            <input type="radio" value="stuffed" name="crust" id="stuffed">Stuffed Rwf 500<br>
-                            <input type="radio" value="gluten-free" name="crust" id="gluten">Gluten-free Rwf 700
+                            <input type="radio" value="crispy" name="crust" id="crispy">Crispy_Rwf 500<br>
+                            <input type="radio" value="stuffed" name="crust" id="stuffed">Stuffed_Rwf 500<br>
+                            <input type="radio" value="gluten-free" name="crust" id="gluten">Gluten-free_Rwf 700
                         </div>
                         <div class="col-md-6 col-sm-6 text-center">
                             <label for="price" id="price">
@@ -73,7 +73,7 @@
                             <label for="details" id="order">
                                 <h3>Details</h3>
                             </label><br>
-                            <label for="resume"><ul id="details"></ul></label>
+                            <label for="resume" id="details"></label>
                         </div>
                     </div><br>
                     <div class="row text-center">
