Find the output

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                     <div class="row text-center">
                         <div class="col-md-3 col-sm-3 ">
                             <label>Choose the size</label><br>
-                            <input type="radio" name="size" value="small" id="small"> Small_Rwf 1800<br>
-                            <input type="radio" name="size" value="medium" id="medium"> Medium_Rwf 3000<br>
-                            <input type="radio" name="size" value="large" id="large"> Large_Rwf 5000
+                            <input type="radio" name="size" value="Small" id="small"> Small_Rwf 1800<br>
+                            <input type="radio" name="size" value="Medium" id="medium"> Medium_Rwf 3000<br>
+                            <input type="radio" name="size" value="Large" id="large"> Large_Rwf 5000
                         </div>
                         <div class="col-md-3 col-sm-3 text-center">
                             <label>Choose the crust</label><br>
-                            <input type="radio" value="crispy" name="crust" id="crispy">Crispy_Rwf 500<br>
-                            <input type="radio" value="stuffed" name="crust" id="stuffed">Stuffed_Rwf 500<br>
-                            <input type="radio" value="gluten-free" name="crust" id="gluten">Gluten-free_Rwf 700
+                            <input type="radio" value="Crispy" name="crust" id="crispy">Crispy_Rwf 500<br>
+                            <input type="radio" value="Stuffed" name="crust" id="stuffed">Stuffed_Rwf 500<br>
+                            <input type="radio" value="Gluten-free" name="crust" id="gluten">Gluten-free_Rwf 700
                         </div>
                         <div class="col-md-6 col-sm-6 text-center">
                             <label for="price" id="price">
@@ -55,23 +55,23 @@
                             <label>Choose toppings</label><br>
                             <select id="toppings" multiple="multiple" size="8">
                                 <option value="" disabled selected>--toppings of your choice--</option>
-                                <option value="mushrooms" id="mushrooms">Mushrooms</option>
-                                <option value="onions" id="onions">Onions</option>
-                                <option value="pepperoni" id="peppe">Pepperoni</option>
-                                <option value="bacon" id="bacon">Bacon and shrimp</option>
-                                <option value="barbecue" id="chicken">Barbecue sauce and chicken</option>
-                                <option value="taco" id="taco">Taco toppings</option>
-                                <option value="cheese" id="cheese">Extra cheese</option>
-                                <option value="peppers" id="green">Green peppers</option>
+                                <option value="Mushrooms" id="mushrooms">Mushrooms</option>
+                                <option value="Onions" id="onions">Onions</option>
+                                <option value="Pepperoni" id="peppe">Pepperoni</option>
+                                <option value="Bacon" id="bacon">Bacon and shrimp</option>
+                                <option value="Barbecue" id="chicken">Barbecue sauce and chicken</option>
+                                <option value="Taco" id="taco">Taco toppings</option>
+                                <option value="Cheese" id="cheese">Extra cheese</option>
+                                <option value="Peppers" id="green">Green peppers</option>
                             </select>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <label for="delivery" id="delivery">
-                                <h1>Delivery charges</h1>
+                                <h1>Delivery charges: </h1>
                             </label>
                             <label for="charges" id="charges">Rwf 2000</label><br>
                             <label for="details" id="order">
-                                <h3>Details</h3>
+                                <h3>Details:</h3>
                             </label><br>
                             <label for="resume" id="details"></label>
                         </div>
