Output the total cost

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                             <label>Quantity</label>
                             <input type="number" min="1" placeholder="--order as much as possible--" id="number">
                         </div>
+                        <div class="col-md-6 col-sm-6">
+                            <label id="total"><h3></h3></p></label>
+                        </div>
                     </div><br>
                     <div class="row justify-content-center">
                         <div class="col-md-6 col sm-6">
