--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <input type="number" min="1" placeholder="--order as much as possible--" id="number">
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <label id="total"><h3></h3></p></label>
+                            <label id="total"><h3></h3></label>
                         </div>
                     </div><br>
                     <div class="row justify-content-center">
