--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="row text-center">
                         <div class="col-md-6 col-sm-6 ">
                             <label>Choose toppings</label><br>
-                            <select id="toppings" multiple="multiple" size="8">
+                            <select id="toppings" >
                                 <option value="" disabled selected>--toppings of your choice--</option>
                                 <option value="Mushrooms" id="mushrooms">Mushrooms</option>
                                 <option value="Onions" id="onions">Onions</option>
