Modify the output details

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="row text-center">
                         <div class="col-md-6 col-sm-6 ">
                             <label>Choose toppings</label><br>
-                            <select id="toppings" >
+                            <select id="toppings">
                                 <option value="" disabled selected>--toppings of your choice--</option>
                                 <option value="Mushrooms" id="mushrooms">Mushrooms</option>
                                 <option value="Onions" id="onions">Onions</option>
@@ -82,7 +82,9 @@
                             <input type="number" min="1" placeholder="--order as much as possible--" id="number">
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <label id="total"><h3></h3></label>
+                            <label id="total">
+                                <h3></h3>
+                            </label>
                         </div>
                     </div><br>
                     <div class="row justify-content-center">
